StandardBus can still connect in a simplified way to Loads/Generators
Signed-off-by: Florian Dupuy <florian.dupuy@rte-france.com>